added state for upsales

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 
 
-    <title>OTA SPA Redux App</title>
+    <title>Air tickets Booking App</title>
 </head>
 <body>
 <div class="container-fluid">
